--- a/silver_calculator.html
+++ b/silver_calculator.html
@@ -124,12 +124,12 @@
                 <!-- Results will be displayed here -->
             </tbody>
         </table>
-        <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank">Güncel Fiyat için Proxy Aktif etmek gerekebilir.</a>
+<!--         <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank">Güncel Fiyat için Proxy Aktif etmek gerekebilir.</a> -->
     </div>
 
     <script>
-    const url = "https://altin.doviz.com/gumus";
-    const proxy = "https://cors-anywhere.herokuapp.com/";
+    // const url = "https://altin.doviz.com/gumus";
+    // const proxy = "https://cors-anywhere.herokuapp.com/";
     const silver_default = 34.75; // Set your default silver price here
 
     async function fetchSilverPrice() {
